Fixed overlapping borders

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,7 @@
 }
 
 .grid-item {
-  border: 1px solid black;
-}
-
-.fill {
-  background-color: rgb(63, 9, 9);
-  background-color: hsl(10, 10, 10);
-  background-color: rgb(63, 9, 9);
+  border: 1px solid rgb(146, 135, 135);
+  margin-top: -1px;
+  margin-left: -1px;
 }
